--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="coming-soon">
          <div class="container">
             <div class="text">
-               <h1>WE ARE COMING SOON</h1>
+               <h1>COUNTDOWN TO CHRISTMAS</h1>
                <h2>SCROLL</h2>
                <span class="arrow"><i class="fa fa-long-arrow-down" aria-hidden="true"></i></span>
             </div>
